# Proyecto-de-Titulo

./: .gitignore  PROYECTO.md  README.md  RMS.PY  audit_report.md  emg_5seg_20260130_162216.csv  emg_5seg_20260130_162241.csv  main.py  pyproject.toml  requirements.txt  resultados_rms.csv  s.docx  save_cvs.py  verification.py
.sixth/agents/: code-review.md
Bicep/Fuerza/: emg_5seg_20260129_225809.csv
Bicep/Relajado/: emg_5seg_20260129_224642.csv  emg_5seg_20260129_224711.csv  emg_5seg_20260129_224805.csv
data/: calibracion.json  captura.py  capture.py  datos_emg_normalizado.csv  migrate.py  sesiones.json  sesiones_control.json
emg_arm/: __init__.py  config.py
emg_arm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
emg_arm/communication/: __init__.py  protocol.py  serial_bridge.py
emg_arm/core/: __init__.py  control_loop.py  main.py
emg_arm/models/: __init__.py  predictor.py
emg_arm/processing/: __init__.py  calibration.py  dsp.py  features.py  filter.py  standardization.py
emg_arm/utils/: __init__.py
firmware/: emg_bridge_v4.ino
firmware/emg_bridge_V2/: emg_bridge_v2.ino  emg_bridge_v3.ino
matlab/: MVC_RMS.m  Musculo_relajado.m  graficas2.m  main.m  yaya.m
models/: meta_entrenamiento.json
src/: config.py  main.py  verification.py
src/core/: serial_bridge.py
src/models/: predictor.py
src/processing/: calibration.py  dsp.py  features.py  filter.py  filters.py  filtro.py  standardization.py
tests/: test_serial_pipeline.py  test_software_evaluations.py
training/: reporte_tesis.py  train.py  train_model.py
